@@ -1,3 +1,7 @@
+2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
+	* PaddingModeTest.cs: ブロック暗号モードをECBに明示的に設定
+
 2006-12-18 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
 	* BlockCipherModeTest.cs: 追加
